# MindForge

./: .env.example  LICENSE  README.md  lms_fixture.json  payment_fixture.json  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  serializers.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_description.py  0003_course_time_create_course_time_update_and_more.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_alter_course_owner_alter_lesson_owner.py
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: create_user_payments.py
users/migrations/: 0001_initial.py  0002_remove_user_token_alter_user_username.py  0003_payment.py  0004_alter_user_phone_number.py  0005_alter_user_country.py
